chore(gitpod): add vscode extensions

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,3 +9,7 @@ ports:
     visibility: public
   - port: 3000
     visibility: public
+vscode:
+  extensions:
+    - "ms-azuretools.vscode-docker"
+    - ZixuanChen.vitest-explorer
