feat: 2024 deps and front updates
- update vscode extensions
- update projects npm deps
- update ui with picoss 2 and some improvements

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,4 +12,6 @@ ports:
 vscode:
   extensions:
     - "ms-azuretools.vscode-docker"
-    - ZixuanChen.vitest-explorer
+    - vitest.explorer
+    - biomejs.biome
+    - Vue.volar
