--- a/apps/rhapi/package.json
+++ b/apps/rhapi/package.json
@@ -13,21 +13,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/supertest": "^2.0.12",
-    "@vitest/coverage-istanbul": "^0.27.2",
-    "nodemon": "^2.0.20",
-    "rome": "^11.0.0",
-    "supertest": "^6.3.3",
+    "@biomejs/biome": "1.7.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/supertest": "^6.0.2",
+    "@vitest/coverage-istanbul": "^1.5.3",
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
-    "vitest": "^0.27.2"
+    "vitest": "^1.5.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-promise-router": "^4.1.1",
-    "prom-client": "^14.1.1"
+    "prom-client": "^15.1.2"
   }
 }
