--- a/apps/rhapi/package.json
+++ b/apps/rhapi/package.json
@@ -13,21 +13,20 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@biomejs/biome": "1.7.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/supertest": "^6.0.2",
-    "@vitest/coverage-istanbul": "^1.5.3",
-    "nodemon": "^3.1.0",
-    "supertest": "^7.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "vitest": "^1.5.3"
+    "@biomejs/biome": "1.9.4",
+    "@types/cors": "2.8.18",
+    "@types/express": "5.0.1",
+    "@types/supertest": "6.0.3",
+    "@vitest/coverage-istanbul": "3.1.3",
+    "nodemon": "3.1.10",
+    "supertest": "7.1.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.3",
+    "vitest": "3.1.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-promise-router": "^4.1.1",
-    "prom-client": "^15.1.2"
+    "express": "5.1.0",
+    "prom-client": "15.1.3"
   }
 }
